# one-mark

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy-pages.yml  release.yml
scripts/: fix-dmg.sh  release-retag.mjs  release-tag.mjs  resolve-release-version.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: move-to-trash.toml  reveal-in-file-manager.toml  take-pending-open-files.toml
src-tauri/src/: main.rs
src/ast/: inline.ts  parse.ts  serialize.ts  types.ts
src/commands/: formatCommands.ts
src/components/: AppDialog.tsx  CloseWorkspaceDialog.tsx  DeleteConfirmDialog.tsx  Editor.tsx  FileConflictDialog.tsx  InsertImageDialog.tsx  InsertLinkDialog.tsx  Preview.tsx  Sidebar.tsx  Titlebar.tsx  Toolbar.tsx  WindowResizeHandles.tsx
src/constants/: codeLanguages.ts
src/document/: DocumentStore.ts  FileSyncWatcher.ts  PersistenceScheduler.ts  UndoStack.ts
src/hooks/: useBlockSelected.ts
src/styles/: code-highlight.css
src/utils/: blockEdit.ts  blockSelection.ts  contextMenuGuard.ts  exportMarkdown.ts  fileSystem.ts  imageBlock.ts  imageResolve.ts  inlineDom.ts  keyboardInputGuard.ts  markdownHighlight.ts  markdownText.ts  revealInFileManager.ts  selectionSync.ts  sessionStorage.ts  tableNavigation.ts  (+1 more)
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+10 files in other folders)
